# socket-interaction

./: CMakeLists.txt  README.md
src/prog_1/: prog_1.cpp  prog_1.h
src/prog_2/: prog_2.cpp  prog_2.h
